--- a/index.html
+++ b/index.html
@@ -127,8 +127,7 @@
 					if(data) {
 						var currentState = ""; //(As in North Carolina)
 						JHUdata = data.split("\n");
-						var length = JHUdata.length - 1; //last line is blank
-						length = 3225; //Actually - line 3225 is the last "county" listing.
+						var length = JHUdata.length;
 						for(var i = 0; i < length; i++) {
 							coronaData[i] = [];
 							coronaData[i] = JHUdata[i].split(",")
