--- a/index.html
+++ b/index.html
@@ -133,7 +133,8 @@
 							coronaData[i] = JHUdata[i].split(",")
 							coronaData[i] = resolveCommas(coronaData[i]);
 							
-							if(i > 0) {
+							if(i > 0 && coronaData[i].length > 0) {
+								if(!(coronaData[i][10])) console.log(i); 
 								var locationInfo = coronaData[i][10].split(",");
 								if(locationInfo[1][0] == " ") {
 									locationInfo[1] = locationInfo[1].substring(1);	
